[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "damer"
version = "0.0.1"
authors = [
    {name = "Luis Teodoro"},
]
description = "A simple python package that simplifies data manipulation."
requires-python = ">=3.10"
dependencies = [
    "pandas==2.2.2",
    "thefuzz==0.22.1",
    "unidecode==1.3.8",
]
